scripts/tests/errors/err_nil_method.bu
// Test: method call on nil
// Expected: runtime error about calling method on nil

var x = nil;
x.foo();
